--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/views/serviceRequests/AudioVisualServiceRequestPage.fxml
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/views/serviceRequests/AudioVisualServiceRequestPage.fxml
@@ -11,9 +11,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="580.0" prefWidth="580.0" stylesheets="@../../viewStyleSheets/mainStyle.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teame.views.serviceRequests.AudioVisualServiceRequestPageServiceRequestController">
+<AnchorPane prefHeight="580.0" prefWidth="800.0" stylesheets="@../../viewStyleSheets/mainStyle.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teame.views.serviceRequests.AudioVisualServiceRequestPageServiceRequestController">
    <children>
-      <GridPane alignment="CENTER" prefHeight="580.0" prefWidth="580.0">
+      <GridPane alignment="CENTER" prefHeight="580.0" prefWidth="800.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -38,49 +38,70 @@
                   <Insets right="20.0" />
                </GridPane.margin>
             </Text>
-            <TextField fx:id="patientName" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="patientName" promptText="Enter patient name..." GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin></TextField>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Room:" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets right="20.0" />
                </GridPane.margin>
             </Text>
-            <TextField fx:id="roomNumber" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="roomNumber" promptText="Enter patient room number..." GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin></TextField>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Floor:" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets right="20.0" />
                </GridPane.margin>
             </Text>
-            <TextField fx:id="floor" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="floor" promptText="Enter patient floor..." GridPane.columnIndex="1" GridPane.rowIndex="4">
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin></TextField>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Start Date:" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
                <GridPane.margin>
                   <Insets right="20.0" />
                </GridPane.margin>
             </Text>
-            <DatePicker fx:id="startDate" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <DatePicker fx:id="startDate" promptText="Choose start date..." GridPane.columnIndex="1" GridPane.rowIndex="5">
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin></DatePicker>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="End Date:" GridPane.halignment="RIGHT" GridPane.rowIndex="6">
                <GridPane.margin>
                   <Insets right="20.0" />
                </GridPane.margin>
             </Text>
-            <DatePicker fx:id="endDate" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <DatePicker fx:id="endDate" promptText="Choose end date..." GridPane.columnIndex="1" GridPane.rowIndex="6">
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin></DatePicker>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Start Time:" GridPane.halignment="RIGHT" GridPane.rowIndex="7">
                <GridPane.margin>
                   <Insets right="20.0" />
                </GridPane.margin>
             </Text>
-            <TextField fx:id="startTime" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <TextField fx:id="startTime" promptText="Enter start time..." GridPane.columnIndex="1" GridPane.rowIndex="7">
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin></TextField>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="End Time:" GridPane.halignment="RIGHT" GridPane.rowIndex="8">
                <GridPane.margin>
                   <Insets right="20.0" />
                </GridPane.margin>
             </Text>
-            <TextField fx:id="endTime" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+            <TextField fx:id="endTime" promptText="Enter end time..." GridPane.columnIndex="1" GridPane.rowIndex="8">
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin></TextField>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Audio/Visual Service Request" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                <font>
                   <Font size="24.0" />
                </font>
             </Text>
-            <JFXButton fx:id="sendButton" buttonType="RAISED" text="Send" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="10" GridPane.valignment="CENTER">
+            <JFXButton fx:id="sendButton" buttonType="RAISED" text="Send" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="9" GridPane.valignment="CENTER">
                <font>
                   <Font size="16.0" />
                </font>
