--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/views/serviceRequests/FoodDeliveryServiceRequestPage.fxml
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/views/serviceRequests/FoodDeliveryServiceRequestPage.fxml
@@ -14,9 +14,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="580.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teame.views.serviceRequests.FoodDeliveryServiceRequestPageServiceRequestController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teame.views.serviceRequests.FoodDeliveryServiceRequestPageServiceRequestController">
    <children>
-      <GridPane layoutX="2.0" layoutY="-2.0" prefHeight="580.0" prefWidth="580.0">
+      <GridPane layoutX="2.0" layoutY="-2.0" prefHeight="580.0" prefWidth="800.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -33,6 +33,7 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Food Delivery Request" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
@@ -45,8 +46,8 @@
                   <Font size="16.0" />
                </font>
             </JFXButton>
-            <DatePicker GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER" />
-            <DatePicker GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER" />
+            <DatePicker promptText="Choose start date..." GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER" />
+            <DatePicker promptText="Choose end date..." GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER" />
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="End Date: " GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="CENTER" />
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Start Date:" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="CENTER" />
             <GridPane GridPane.columnIndex="2" GridPane.rowIndex="5">
@@ -130,7 +131,7 @@
                         <Insets />
                      </GridPane.margin>
                   </Text>
-                  <TextField fx:id="breakfastTimeTextField" prefWidth="193.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="breakfastTimeTextField" prefWidth="193.0" promptText="Enter time..." GridPane.columnIndex="1" GridPane.rowIndex="1" />
                   <Text fx:id="MealTextB" disable="true" strokeType="OUTSIDE" strokeWidth="0.0" text="Meal:" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
                      <GridPane.margin>
                         <Insets />
@@ -168,7 +169,7 @@
                         <Insets />
                      </GridPane.margin>
                   </Text>
-                  <TextField fx:id="lunchTimeTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="lunchTimeTextField" promptText="Enter time...." GridPane.columnIndex="1" GridPane.rowIndex="1" />
                   <Text fx:id="MealTextL" strokeType="OUTSIDE" strokeWidth="0.0" text="Meal:" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
                      <GridPane.margin>
                         <Insets />
@@ -195,7 +196,7 @@
                         <Insets />
                      </GridPane.margin>
                   </Text>
-                  <TextField fx:id="dinnerTimeTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="dinnerTimeTextField" promptText="Enter time..." GridPane.columnIndex="1" GridPane.rowIndex="1" />
                   <Text fx:id="MealTextD" strokeType="OUTSIDE" strokeWidth="0.0" text="Meal:" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
                      <GridPane.margin>
                         <Insets />
@@ -204,12 +205,7 @@
                   <JFXComboBox fx:id="dinnerMealDropdown" prefHeight="25.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                </children>
             </GridPane>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Dietary Restrictions(Y/N):" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
-               <GridPane.margin>
-                  <Insets right="10.0" />
-               </GridPane.margin>
-            </Text>
-            <CheckBox fx:id="dietaryRestrictions" mnemonicParsing="false" onAction="#DietaryRestrictionsCallBack" GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <CheckBox fx:id="dietaryRestrictions" mnemonicParsing="false" onAction="#DietaryRestrictionsCallBack" text="Dietary Restrictions (Y/N)" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
@@ -224,12 +220,12 @@
                   <Insets right="10.0" />
                </GridPane.margin>
             </Text>
-            <TextField fx:id="floor" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <TextField fx:id="floor" promptText="Enter patient floor..." GridPane.columnIndex="1" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="roomNumber" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <TextField fx:id="roomNumber" promptText="Enter patient room number..." GridPane.columnIndex="1" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
@@ -239,7 +235,7 @@
                   <Insets right="10.0" />
                </GridPane.margin>
             </Text>
-            <TextField fx:id="patientName" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <TextField fx:id="patientName" promptText="Enter patient name..." GridPane.columnIndex="1" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
