--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/views/serviceRequests/GiftAndFloralServiceRequestPage.fxml
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/views/serviceRequests/GiftAndFloralServiceRequestPage.fxml
@@ -13,9 +13,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="580.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teame.views.serviceRequests.GiftAndFloralDeliveryServiceRequestPageServiceRequestController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teame.views.serviceRequests.GiftAndFloralDeliveryServiceRequestPageServiceRequestController">
     <children>
-      <GridPane layoutY="2.0" prefHeight="580.0" prefWidth="580.0">
+      <GridPane layoutY="2.0" prefHeight="580.0" prefWidth="800.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -23,6 +23,7 @@
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -41,67 +42,102 @@
                   <Font size="16.0" />
                </font>
             </JFXButton>
-              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Deliver at a later time/date?" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
+              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Floor:" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin>
             </Text>
-              <CheckBox fx:id="scheduleCheckbox" mnemonicParsing="false" onAction="#ScheduleCallBack" GridPane.columnIndex="1" GridPane.rowIndex="5">
-               <GridPane.margin>
-                  <Insets left="10.0" right="10.0" />
-               </GridPane.margin>
-            </CheckBox>
-              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Fragile (Y/N):" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
-               <GridPane.margin>
-                  <Insets right="10.0" />
-               </GridPane.margin>
-            </Text>
-              <CheckBox fx:id="fragileCheckbox" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="4">
-               <GridPane.margin>
-                  <Insets left="10.0" right="10.0" />
-               </GridPane.margin>
-            </CheckBox>
-              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Floor:" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
-               <GridPane.margin>
-                  <Insets right="10.0" />
-               </GridPane.margin>
-            </Text>
-              <TextField fx:id="floorTextBox" GridPane.columnIndex="1" GridPane.rowIndex="3">
+              <TextField fx:id="floorTextBox" promptText="Enter patient floor..." GridPane.columnIndex="1" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </TextField>
-              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Room:" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Room:" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin>
             </Text>
-              <TextField fx:id="roomTextBox" GridPane.columnIndex="1" GridPane.rowIndex="2">
+              <TextField fx:id="roomTextBox" promptText="Enter patient room number..." GridPane.columnIndex="1" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </TextField>
-              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Patient Name: " GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Patient Name: " GridPane.halignment="RIGHT" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin>
             </Text>
-              <TextField fx:id="patientNameTextBox" GridPane.columnIndex="1" GridPane.rowIndex="1">
+              <TextField fx:id="patientNameTextBox" promptText="Enter patient name..." GridPane.columnIndex="1" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </TextField>
+            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="5">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                    <CheckBox fx:id="fragileCheckbox" mnemonicParsing="false" text="Fragile? (Y/N)">
+                     <GridPane.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </GridPane.margin>
+                  </CheckBox>
+                    <CheckBox fx:id="scheduleCheckbox" mnemonicParsing="false" onAction="#ScheduleCallBack" text="Deliver at a later time/date?" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets left="10.0" />
+                     </GridPane.margin>
+                  </CheckBox>
+               </children>
+            </GridPane>
+            <GridPane fx:id="deliveryGridPaneRight" prefHeight="60.0" prefWidth="418.0" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="6">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                      <TextField fx:id="deliveryTimeTextbox" promptText="Enter deliver time...">
+                     <GridPane.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </GridPane.margin>
+                  </TextField>
+                      <DatePicker fx:id="deliveryDateDatebox" promptText="Choose delivery date..." GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </GridPane.margin>
+                  </DatePicker>
+               </children>
+            </GridPane>
+            <GridPane fx:id="deliveryGridPaneLeft" visible="false" GridPane.rowIndex="6">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                      <Text fx:id="deliveryTimeText" disable="true" strokeType="OUTSIDE" strokeWidth="0.0" text="Delivery Time:" GridPane.halignment="RIGHT">
+                     <GridPane.margin>
+                        <Insets right="10.0" />
+                     </GridPane.margin>
+                  </Text>
+                      <Text fx:id="deliveryDateText" strokeType="OUTSIDE" strokeWidth="0.0" text="Delivery Date" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets right="10.0" />
+                     </GridPane.margin>
+                  </Text>
+               </children>
+            </GridPane>
          </children>
       </GridPane>
         <TextArea fx:id="dietaryRestrictionsDescribe" layoutX="241.0" layoutY="143.0" prefHeight="56.0" prefWidth="192.0" visible="false" />
         <Text fx:id="dietaryRestrictionsDescribeText" layoutX="281.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Describe Restrictions:" visible="false" />
-        <AnchorPane fx:id="scheduleAnchorPane" layoutX="18.0" layoutY="189.0" prefHeight="75.0" prefWidth="315.0" visible="false">
-            <children>
-                <Text disable="true" layoutY="25.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Delivery Time:" />
-                <Text layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Delivery Date" />
-                <TextField fx:id="deliveryTimeTextbox" layoutX="83.0" layoutY="8.0" />
-                <DatePicker fx:id="deliveryDateDatebox" layoutX="83.0" layoutY="41.0" />
-            </children>
-        </AnchorPane>
     </children>
 </AnchorPane>
